theme-park-ride-ops-6/k8s/app/app-deployment.yaml
# k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-ops-api
  namespace: themepark-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ride-ops-api
  template:
    metadata:
      labels:
        app: ride-ops-api
    spec:
      containers:
        - name: ride-ops-api
          image: ${REGISTRY_URL}/ride-ops-api:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
