theme-park-ride-ops-6/k8s/app/app-service.yaml
/k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ride-ops-service
  namespace: themepark-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ride-ops-app
